--- a/style.css
+++ b/style.css
@@ -1,171 +1,91 @@
-header {
-    background: #050505;
-    padding: 1rem;
+header{
+    background: #00ddff;
+    padding: 2rem;
     position: fixed;
     top: 0;
     left: 0;
     right: 0;
-    box-shadow: 0 .5rem 1rem rgba(86, 96, 97, 0.924);
+    box-shadow: 0 .5rem 1rem rgba(3, 165, 194, 0.924);
     align-items: center;
     justify-content: space-between;
     display: flex;
 }
-
-header .logo {
+header .logo{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-weight: 500%;
+    font-weight: 500;
     font-style: normal;
     font-size: 2.2rem;
-    color: rgb(226, 173, 58);
+    color: black;
     text-decoration: none;
 }
-
-header .logo img {
+header .logo img{
     width: 3rem;
     height: 3rem;
-    margin-bottom: -10px;  
-    padding-right: 20px;
+    margin-bottom: -10px;
+    padding-right: 15px;
 }
 
-header .menu a {
-    font-family: 'Times New Roman', Times, serif;
+header .menu a{
+    font-family: Arial, Helvetica, sans-serif;
     position: relative;
     font-size: 2rem;
-    color: rgb(255, 175, 2, 0.877);
+    color: black;
     text-decoration: none;
     font-weight: 500;
     padding: 10px 10px;
     word-spacing: 1px;
 }
-
-header .menu a:hover {
+header .menu a:hover{
     background: white;
     border-radius: 10px 10px 10px 10px;
 }
 
-section {
+section{
     /* padding-top: 10rem; */
-    padding-top: 80px;
-    padding-bottom:80px;
-    padding-left:1px;
-    padding-right:1px;
+    padding: 10rem 4%;
 }
 
-.home {
+.home{
     display: flex;
     align-items: center;
     flex-wrap: wrap;
 }
-
 .home .content {
-    width: 70%;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    background: url('images/delicious\ food.jpeg');
-    background-repeat: no-repeat;
-    background-size: cover; 
-    padding: 270px;
 }
-
-.home .content .content-left {
-    width: 100%;
+.home .content .content-left{
+    width: 45%;
     margin-right: 15px;
 }
-.home .content .content-right {
-    width: 70%;
+.home .content .content-left img{
+    width: 100%;
+    height: 100%;
+    border-radius: 100px 100px 100px 100px;
+    box-shadow: 0 5px 5px 5px rgba(13, 110, 253, 0.2);
+    border-radius: 61% 39% 36% 64% / 57% 56% 44% 43%;
+}
+.home .content .content-right{
+    width: 50%;
     margin-left: 15px;
 }
-
-.home .content .content-right h2 {
+.home .content .content-right h1{
     text-transform: uppercase;
     text-align: center;
-    color: rgb(255, 166, 0);
 }
-
-.home .content .content-right p {
-    font-size: 1.5rem;
-    text-align: justify;
-    text-transform: lowercase;
-   font-style: italic;
+.home .content .content-right p{
+   font-size: 1.5rem;
+   text-align: justify;
 }
-
-.home .content .content-right a {
-    font-size: 2rem;
+.home .content .content-right p a{
+    font-size:  2rem;
     text-decoration: none;
-    justify-content: space-between;
-    align-items: center;
-    width: 75%;
-    margin-top: -20px;
-    text-align: center;
-
 }
-
-.home .content .content-right a button {
-    height: 30px;
-    width: 100%;
-    border: 2px solid rgba(255, 255, 255, 0.007);
-    border-radius: 5px;
-    color: #fff;
-    background: #09e6e6b7;
-    cursor: pointer;
-    transition: 500ms;
-    font-size: 18px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-weight: 500;
-    text-transform: uppercase;
-    margin-left: 10px;
-    margin-right: 10px;
-    display: block;
-    text-decoration: none;
-
-}
-
-.about .content .content-right {
-    text-transform: uppercase;
-    text-align: center;
-    color: rgb(255, 145, 0);
-}
-    
-
-
-
-/*section about end*/
-
-.footer{
-    display: flex;
-    flex-direction:column;
-    justify-content:center;
-    align-items: center;
-    background-color: #fff;
-    padding: 2rem 0;
-}
-.footer.box-container{
-    display: flex;
-    grid-template-columns: repeat(auto-fit,minxmax(22rem,1fr));
-    gap: 2rem;
-    width: 100%;
-    padding: 0 2rem;
-    margin-bottom: 2rem;
-}
-.footer .box{
-    text-align: justify;
-
-}
-.footer.box-container h3{
-    font-size: 2.5rem;
-    color: rgb(0, 0, 0);
-    padding: .8rem 0; 
-    border-bottom: .2rem solid rgb(0, 0, 0);
-
-}
-.footer.box-container .box a{
-    display: flex;
-    align-items: center ;
-    font-size: 1.5rem;
-    color: aqua;
-    padding: 1rem 0;
-    text-transform: none;
-    text-decoration: none;
-    
+.home .content .content-right p a button{
+   height: 30px;
+   width: 100px;
+   border: 2px rgb(250, 157, 114);
+   border-radius: 50px;
 }
