--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+html{
+    font-size: 62.5%;
+    overflow-x: hidden;
+    scroll-padding-top: 7rem;
+    scroll-behavior: smooth;
+}
 header {
     background: #050505;
     padding: 1rem;
